--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,4 +22,7 @@
 
         <activity android:name=".ShowTextActivity" />
     </application>
+    <queries>
+        <package android:name="ru.netology.testing.uiautomator" />
+    </queries>
 </manifest>
