--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    
     - name: Build with Gradle
       run: ./gradlew build
       
@@ -30,6 +31,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
