--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,4 +43,5 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
+        arch: arm64-v8a
         script: ./gradlew connectedCheck
